<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Fragments.AddCarInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/selectCarPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_background_edittext"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewCarPhoto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/camera_plus" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextCarName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/white_background_edittext"
            android:hint="@string/car_name_"
            android:inputType="textNoSuggestions"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/navy"
            android:textColorHint="#808080"/>

        <EditText
            android:id="@+id/editTextCarModel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_background_edittext"
            android:hint="@string/car_model_"
            android:inputType="textNoSuggestions"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/navy"
            android:textColorHint="#808080"/>

        <EditText
            android:id="@+id/editTextCarPlate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_background_edittext"
            android:hint="@string/car_plate"
            android:inputType="textNoSuggestions"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textColor="@color/navy"
            android:textColorHint="#808080"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_background_edittext">

            <TextView
                android:id="@+id/txtcarLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="90dp"
                android:paddingHorizontal="20dp"
                android:text="@string/add_current_location"
                android:textSize="17sp"
                android:textColor="@color/navy"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonUploadCarInfo"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/btn_dark"
                android:text="@string/upload"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBarPass"
                style="?android:attr/progressBarStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
