<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_pass"
    tools:context=".Fragments.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:id="@+id/amazonName"
                        android:text="@string/profile"
                        android:textSize="40sp"
                        android:textColor="@color/navy"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="40dp"
                        android:paddingHorizontal="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/amazonDesc"
                        android:text="@string/tailored_to_your_needs"
                        android:textSize="14sp"
                        android:layout_marginStart="18dp"
                        android:textColor="@color/navy"
                        android:paddingHorizontal="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/amazonName"
                        app:layout_constraintEnd_toStartOf="@+id/amazonImage"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="160dp"
                        android:id="@+id/amazonImage"
                        android:src="@drawable/account_icon_nb"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toEndOf="@id/amazonName"
                        app:tint="@color/navy" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="200dp"
                    android:background="@drawable/white_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/EditTextNameAccount"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:paddingStart="10dp"
                        android:textColor="@color/navy"
                        android:textColorHint="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/EditTextEmailAccount"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@android:drawable/sym_action_email"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="Email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textColor="@color/navy"
                        android:textColorHint="#000000"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="Password"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/navy"
                        app:hintTextColor="@color/navy"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:backgroundTint="@android:color/transparent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:drawableStart="@drawable/pass"
                            android:drawablePadding="10dp"
                            android:paddingVertical="10dp"
                            android:inputType="textPassword"
                            android:textColor="@color/navy"
                            android:textColorHint="#000000"
                            android:textSize="16sp"
                            android:gravity="start|center_vertical"
                            android:background="@drawable/white_background_edittext" /> <!-- Use white background for no border -->

                    </com.google.android.material.textfield.TextInputLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/ButtonAccount"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:background="@drawable/btn_dark"
                            android:text="@string/edit"
                            android:textColor="#ffffff"
                            android:textSize="16sp" />

                        <ProgressBar
                            android:id="@+id/progressBarPass"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>